fix: jumping menu

--- a/user/themes/centra/scss/_sidebar.scss
+++ b/user/themes/centra/scss/_sidebar.scss
@@ -136,7 +136,7 @@
   display: inline-block;
   position: relative;
 
-  & ul {
+  & ul li:last-of-type {
     margin-bottom: 16px;
   }
 }
